minor fixes and toggle added for dark mode

--- a/src/components/Body/About/about.css
+++ b/src/components/Body/About/about.css
@@ -46,8 +46,10 @@
 }
 
 .btn-info {
+	border: 1px solid blueviolet;
 	padding: 4px 12px;
-	width: 90%;
+	width: 8rem;
+	height: 2rem;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -55,7 +57,6 @@
 }
 
 .btn-info:hover {
-	border: 1px solid;
 	box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.5), 0 0 20px rgba(68, 66, 66, 0.2);
 	outline-color: rgba(255, 255, 255, 0);
 	outline-offset: 15px;
@@ -70,7 +71,6 @@
 
 .mywork {
 	color: blueviolet;
-	border: 1px solid blueviolet;
 	box-shadow: 4px 4px 4px rgba(52, 43, 56, 0.2);
 }
 
@@ -78,11 +78,11 @@
 	.info-buttons {
 		flex-direction: column;
 		font-size: 18px;
+		gap:2rem;
 	}
 
 	.btn-info {
 		width: 100px;
-		margin-bottom: 24px;
 	}
 }
 
@@ -115,6 +115,18 @@
 		width: 32px;
 	}
 }
+
+@media only screen and (max-width: 800px) {
+	.about-info,.info-name{
+		font-size: 24px;
+	}
+
+	.typing {
+		font-size: 18px;
+		padding-top: 18px;
+	}
+}
+
 
 /* @ Hand Wave Animation */
 
