--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -4,6 +4,7 @@
 	display: flex;
 	justify-content: space-between;
 	flex: 1;
+	gap: 1.6rem;
 	padding: 12px;
 	position: relative;
 	align-items: center;
@@ -41,6 +42,11 @@
 
 .menu-icon {
 	z-index: 999;
+}
+
+.mode-toggle {
+	display: flex;
+    align-items: center;
 }
 
 @media only screen and (max-width: 720px) {
